fix(dashboard): don't let logout menu partially block "Add device"
Only the bottom part of the button was clickable since the logout menu
partially blocked it (although invisible with opacity 0)

--- a/packages/dashboard/src/components/dropdown-menu/dropdown-menu.scss
+++ b/packages/dashboard/src/components/dropdown-menu/dropdown-menu.scss
@@ -44,6 +44,7 @@
     }
 
     .close {
+      visibility: hidden;
       opacity: 0;
       transform: translateY(-1em);
     }
